--- a/pom.xml
+++ b/pom.xml
@@ -7,27 +7,44 @@
   <version>1.0-SNAPSHOT</version>
   <name>pooledWsClientTest Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <version.eap6>6.3.0.GA</version.eap6>
+  </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jboss.bom</groupId>
+        <artifactId>eap6-supported-artifacts</artifactId>
+        <version>${version.eap6}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
+    <!-- <dependency> -->
+    <!--   <groupId>log4j</groupId> -->
+    <!--   <artifactId>log4j</artifactId> -->
+    <!--   <version>1.2.17</version> -->
+    <!-- </dependency> -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
       <version>2.2</version>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.ws</groupId>
+      <artifactId>jbossws-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
-      <version>3.0.0.GA</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
