--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,12 @@
   </dependencies>
   <build>
     <finalName>pooledWsClientTest</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.jboss.as.plugins</groupId>
+        <artifactId>jboss-as-maven-plugin</artifactId>
+        <version>7.5.Final</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
