--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>pooledWsClientTest Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <version.cxf>3.0.2</version.cxf>
+    <version.cxf>3.1.0-SNAPSHOT</version.cxf>
   </properties>
   <dependencies>
     <dependency>
